@@ -399,6 +399,19 @@ CloudCmd.getModules             = function(pCallBack){
     });
 };
 
+CloudCmd.execFromModule         = function(pModuleName, pFuncName, pParams){
+    var lObject     = CloudCmd[pModuleName];
+    Util.ifExec('init' in lObject,
+        function(){
+            var lObj = CloudCmd[pModuleName];
+            Util.exec( lObj[pFuncName], pParams);
+        },
+        
+        function(pCallBack){
+            Util.exec(lObject, pCallBack);
+        });
+};
+
 
 /* функция меняет ссыки на ajax-овые */
 CloudCmd._changeLinks            = function(pPanelID){
