@@ -46,6 +46,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
         });
     }
     
+    
     /** 
      * function get menu item object for Upload To
      */
@@ -62,16 +63,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
         else if( Util.isString(pObjectName) ){
             lObj = function(key, opt){
                 DOM.getCurrentData(function(pParams){
-                    var lObject     = CloudCmd[pObjectName];
-                    
-                    Util.ifExec('init' in lObject,
-                        function(){
-                            CloudCmd[pObjectName].uploadFile(pParams);
-                        },
-                        
-                        function(pCallBack){
-                            Util.exec(lObject, pCallBack);
-                        });
+                    CloudCmd.execFromModule(pObjectName, 'uploadFile', pParams);
                 });
             
                 Util.log('Uploading to ' + pObjectName+ '...');
@@ -179,7 +171,15 @@ var CloudCommander, Util, DOM, CloudFunc, $;
                 Util.log('New->File');
             },
             
-            'Dir' : DOM.promptNewFolder
+            'Dir' : DOM.promptNewFolder,
+            
+            'From cloud...' : function(){
+                CloudCmd.execFromModule('FilePicker', 'saveFile', function(pName, pData){
+                    var lPath = DOM.getCurrentDirPath() + pName;
+                    
+                    DOM.RESTfull.save(lPath,  pData, CloudCmd.refresh);
+                });
+            }
         };
         
         lRet = {
