@@ -13,11 +13,37 @@ var CloudCommander, Util, DOM, $, filepicker;
         };
         
         
-        this.uploadFile     = function(pCallBack){
+        this.uploadFile     = function(pParams, pCallBack){
+            var lContent    = pParams.data,
+                lName       = pParams.name;
+                
+            filepicker.store(lContent, {filename: lName},
+                function(new_fpfile){
+                    console.log(JSON.stringify(new_fpfile));
+                    filepicker.exportFile(
+                          'https://drpyjw32lhcoa.cloudfront.net/0d6afe9/img/success.png',
+                          function(FPFile){
+                            console.log(FPFile.url);
+                        });
+                }
+            );
             filepicker.pick(function(FPFile){
                 console.log(FPFile.url);
                 
                 Util.exec(pCallBack);
+            });
+        };
+        
+        this.saveFile   = function(pCallBack){
+            filepicker.pick(function(FPFile){
+                console.log(FPFile);
+                
+                DOM.ajax({
+                    url     : FPFile.url,
+                    success : function(pData){
+                        Util.exec(pCallBack, FPFile.filename, pData);
+                    }
+                });
             });
         };
         
