@@ -24,6 +24,7 @@
         Socket              = main.socket,
         
         http                = main.http,
+        https               = main.https,
         Util                = main.util,
         
         Server, Rest, Route, Minimize, Port, IP;
@@ -62,6 +63,8 @@
         Route           = pProcessing.route;
         Minimize        = pProcessing.minimize;
         
+        var lSSL            = pProcessing.ssl;
+        
         init(pProcessing.appcache);
         
         Port = process.env.PORT                 ||  /* c9           */
@@ -76,7 +79,10 @@
         /* server mode or testing mode */
         if (lConfig.server) {
             var lError = Util.tryCatchLog(function(){
-                    Server =  http.createServer( controller );
+                    if(!lSSL)
+                        Server =  http.createServer( controller );
+                    else
+                        Server =  https.createServer( lSSL, controller );
                     Server.listen(Port, IP);
                     
                     var lListen;
