@@ -189,6 +189,7 @@
             
             
             lRet = {
+                'Access-Control-Allow-Origin': '*',
                 'Content-Type': lType + lContentEncoding,
                 'last-modified': new Date().toString(),
                 'Vary': 'Accept-Encoding'
