@@ -1,0 +1,17 @@
+-----BEGIN CERTIFICATE-----
+MIICtzCCAiACCQCCiuC5c+uyqzANBgkqhkiG9w0BAQUFADCBnzELMAkGA1UEBhMC
+WFgxWzBZBgNVBAgMUm9wZW5zc2wgeDUwOSAtcmVxIC1pbiBjZXJ0cmVxdWVzdC5j
+c3IgLXNpZ25rZXkgcHJpdmF0ZWtleS5wZW0gLW91dCBjZXJ0aWZpY2F0ZS5wZW0x
+FTATBgNVBAcMDERlZmF1bHQgQ2l0eTEcMBoGA1UECgwTRGVmYXVsdCBDb21wYW55
+IEx0ZDAeFw0xMzAzMDQxMTA1NDdaFw0xMzA0MDMxMTA1NDdaMIGfMQswCQYDVQQG
+EwJYWDFbMFkGA1UECAxSb3BlbnNzbCB4NTA5IC1yZXEgLWluIGNlcnRyZXF1ZXN0
+LmNzciAtc2lnbmtleSBwcml2YXRla2V5LnBlbSAtb3V0IGNlcnRpZmljYXRlLnBl
+bTEVMBMGA1UEBwwMRGVmYXVsdCBDaXR5MRwwGgYDVQQKDBNEZWZhdWx0IENvbXBh
+bnkgTHRkMIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCtM0N5vaWCtx8Wp5IN
+8VW62Hm2RSxIZougZ9qQbm8xLNNDZok8qGoNXZguNYSazuB3O0JcVUwI81OeMVB+
+j/uAIIXJK/t4npmR8Cak2MjquShy2dyC6DW42ikwXeRU26vOxH6fzfaOrDahNVwD
+hPsXAqdgpsjRWvr17qW77ycWAwIDAQABMA0GCSqGSIb3DQEBBQUAA4GBAJxlSiFF
++f8KJSootodifS0KNTUWKZl7Ajh+unpfRpevZFHhSMjK5xAERGGylvZy+b2GYjXq
+J61jIITSlo4r43jOafmpqsbEOE85Ctm5Fv+7jnzNT6C8wFcc5L4JLuFREP2oCtTZ
+oTYTEFxW0NzIiQChSn9SB4RKfn85OUWzNyKE
+-----END CERTIFICATE-----
